Home and Navbar are responsive. Fixed the Home link on small screens.

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -41,7 +41,6 @@
   border: none;
   background-color: transparent;
   text-align: center;
-  padding: 14px 16px;
   text-decoration: none;
   font-size: 20pt;
   cursor: pointer;
@@ -84,8 +83,10 @@
 
   .hamburger {
     display: block;
-    padding-top: 10px;
-    margin-left: 10px;
+    padding-top: 5px;
+    margin-bottom: 5px;
+    margin-left: auto;
+    margin-right: 10px;
   }
 
   .nav-items {
@@ -110,7 +111,7 @@
     margin-left: 0;
   }
 
-  .active-nav-item {
-    margin-left: auto; /* Push active item to the right */
+  .nav-item:first-child {
+    margin-left: 0;
   }
 }
